--- a/src/pages/AccountInfo/AccountInfo.module.css
+++ b/src/pages/AccountInfo/AccountInfo.module.css
@@ -12,6 +12,10 @@
     padding-top: 5em;
 }
 
+.deleteIcon:hover {
+    cursor: pointer;
+}
+
 @media screen and (max-width: 800px) {
     .codeContainer {
         margin-top: 2em;
