fix footer logic to display when logged in add subscription cards use named exports for components

--- a/src/pages/AccountInfo/AccountInfo.module.css
+++ b/src/pages/AccountInfo/AccountInfo.module.css
@@ -16,6 +16,16 @@
     cursor: pointer;
 }
 
+.subscriptions {
+    display: flex;
+    justify-content: space-around;
+}
+
+.supportSection {
+    text-align: center;
+    margin-top: 2em;
+}
+
 @media screen and (max-width: 800px) {
     .codeContainer {
         margin-top: 2em;
