styling and copy changes add videos to sign in page

--- a/src/pages/AccountInfo/AccountInfo.module.css
+++ b/src/pages/AccountInfo/AccountInfo.module.css
@@ -11,6 +11,10 @@
     cursor: pointer;
 }
 
+.cardContainer {
+    margin: 0 1em;
+}
+
 .subscriptions {
     display: flex;
     justify-content: space-around;
