--- a/src/pages/SignIn/Signin.module.css
+++ b/src/pages/SignIn/Signin.module.css
@@ -57,6 +57,12 @@
     flex-wrap: wrap;
 }
 
+.contactUs {
+    text-align: center;
+    margin: 1em 0 2em;
+    padding-bottom: 3em;
+}
+
 @media only screen and (max-width: 850px) {
     .header {
         flex-wrap: wrap-reverse;
